fixed z-index of nav to stay on top of everything else

--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@ body {
     font-size: 18px;
 }
 
-header {
-
+nav {
+    z-index: 1000;
 }
 
 main {
